tests/sema/fail/v16_fail_adt_variant_field_unguarded.ep
# COMPILE_FAIL_CONTAINS: union Node has no common field name
struct Leaf { name: str }
struct Pair { value: i64 }
type Node = Leaf | Pair
fun main(): void {
    let n: Node = new Node(new Leaf { name: "x" })
    println(n.name)
}
